fix(button): fullbleed 100% rule

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -119,7 +119,7 @@ button {
   }
 
   &.fullbleed {
-    width: inherit;
+    width: 100%;
     display: flex;
     justify-content: center;
   }
